fix overflow/alignment issues

--- a/apps/modernization-ui/src/apps/page-builder/components/QuickConditionLookup/QuickConditionLookup.scss
+++ b/apps/modernization-ui/src/apps/page-builder/components/QuickConditionLookup/QuickConditionLookup.scss
@@ -1,8 +1,17 @@
+.usa-modal__main {
+    overflow-y: hidden;
+    max-height: 1050px;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 24px;
+    padding: 0;
     align-items: center;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     .close-btn {
         color: black;
 
@@ -14,7 +23,8 @@
 
 .condition-lookup-modal-body {
     padding: 24px;
-    height: 720px;
+    max-height: 642px;
+    overflow-y: scroll;
 
     thead th {
         &:nth-of-type(1) {
